manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: example-ts-nodejs
  name: example-ts-nodejs
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: example-ts-nodejs
  type: LoadBalancer
