manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: example
spec:
  rules:
  - host: example.edgestream.net
    http:
      paths:
      - backend:
          service:
            name: example-ts-nodejs
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - example.edgestream.net
    secretName: example-tls
